[tool.poetry]
name = "climateapi"
version = "0.1.0"
description = ""
authors = ["williamsongshy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
requests = "^2.25.1"
APIFlask = "^0.3.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
